# Embedded_Player

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.h
Drivers/CMSIS/Device/ST/STM32F7xx/Include/: stm32f7xx.h
Inc/: ffconf.h  term_io.h
Modules/: audio_loader.c  audio_loader.h  audio_player.c  audio_player.h  controls.c  controls.h  effect_converter.c  effect_converter.h  gui.c  gui.h  gui_colors.h
Src/: term_io.c
